# housing-tool

./: .dockerignore  .env  .gitignore  alembic.ini  docker-compose.yml  main.py  populate.py  pyproject.toml  pyrightconfig.json  pytest.ini  rename_html_files.py
.github/workflows/: checks.yml  code_analysis.yml  ruff.yml
alembic/: env.py  script.py.mako
alembic/versions/: ec25c2dec8b7_initial_migration_add_offer.py  fe4e478b3610_offer_elevator_is_now_a_bool.py
common/: classes.py  fast_process.py  time_manager.py  utils.py
db/: database.py  models.py
html_parser/: OTO_msgspec.py  OTO_parser.py  __main__.py  env.py  parser.py  web_1_parser.py
test/html_parser/: test_OTO_data.py  test_OTO_parse_offer.py  test_web_1_offer.py  web_1_data.py
web_scraper/: BaseScraper.py  __main__.py  common_scraper.py  env.py  headers.py  scrape.py  scraper.py  utils.py  web_1_scraper.py
webs/: env.py  web_1_data.py
